# scottsandbox

./: .gitignore  CMakeLists.txt  README.txt
cmake/: EnableExtraCompilerWarnings.cmake
common/: CMakeLists.txt
common/include/: utils.h
common/include/app/: debug.h  logging.h  logging_debugstreambuf.inl  logging_stream.h  platform.h
common/include/common/: assert.h  color.h  delete.h  deref.h  nullptr.h  time.h  utils.h
common/include/game2d/: fixedgrid.h  point.h
common/include/geom/: boundingbox.h  defs.h  frustum.h  intersection.h  plane.h  ray.h  sphere.h  triangle.h  utils.h
common/include/math/: Xutils.h  angle.h  constants.h  conversion.h  defs.h  interpolation.h  io.h  matrix.h  matrixutils.h  point.h  quaternion.h  random.h  rational.h  rect.h  sphere.h  tmatrix.h  util.h  vector.h
common/include/string/: lcasts.h  tokenizer.h  util.h
common/src/: appcore.cpp
common/src/app/: app.cpp  debug.cpp  logstream.cpp  platform.cpp  platform_unix.cpp
common/src/common/: app.cpp  time.cpp
common/src/geom/: boundingbox.cpp  color.cpp  frustum.cpp  geoms.cpp  intersectresult.cpp  plane.cpp  ray.cpp  utils.cpp
common/src/math/: perlin.cpp  utils.cpp  vector.cpp
common/src/string/: crc.cpp  loadfile.cpp  replace.cpp  streamprint.cpp  tokenizer.cpp  utils.cpp
common/tests/common/: test_color.cpp  test_delete.cpp  test_deref.cpp
common/tests/game2d/: test_fixedgrid.cpp  test_point.cpp
common/tests/geom/: test_color.cpp  test_intersectionresult.cpp  test_ray.cpp
common/tests/math/: test_matrix2.cpp  test_matrix4.cpp  test_point.cpp  test_utils.cpp  test_vector2.cpp  test_vector3.cpp  test_vector4.cpp
common/tests/string/: test_streamprint.cpp
docs/: commandlinehelp.txt  doxytemplates.cpp  licenses.txt  mac.txt
docs/notes/: dxguid_compile_error.txt  standards.txt
docs/samples/: assets.xml  basic.material.xml  model.xml  myscene.scene.xml  penguin.xml  simple.mesh.xml  skinned.mesh.xml
extra/cmake/: sharedfuncs.cmake
extra/googletest/: testrunner.cpp
extra/googletest/include/googletest/: googletest.h
integrate/: README.txt  cubemesh.cpp  plane.cpp  random.h  vector.h
libcommon/: CMakeLists.txt  testrunner.cpp  unittests.h
libcommon/app/: app.h  globallog.cpp  platform_utest.cpp
libcommon/common/: CMakeLists.txt  assert.cpp  assert.h  bits.h  nullptr.h  scopedptr.h  static_assert.h
libcommon/common/tests/: test_assert.cpp  test_bits.cpp  test_delete.cpp  test_deref.cpp  test_scopedptr.cpp
libcommon/math/: CMakeLists.txt  config.h  constants.h  noise.h  perlin.cpp  perlin.h  quaternion.h
libcommon/math/tests/: test_angle.cpp  test_interpolation.cpp  test_matrix4.cpp  test_noise.cpp  test_quaternion.cpp  test_random.cpp  test_utils.cpp
libcommon/string/: CMakeLists.txt  crc.cpp  crc.h  stringutil.cpp  stringutil.h
libcommon/string/tests/: test_crc.cpp  test_lcasts.cpp  test_makestring.cpp  test_sequencelister.cpp  test_streamprint.cpp  test_stringutils.cpp  test_tokenizer.cpp  test_transferstring.cpp
miniapps/: CMakeLists.txt
miniapps/archiver/: CMakeLists.txt  NOTICE.txt  TODO  archive.cpp  archive.h  archivedata.cpp  archivedata.h  commandline.cpp  constants.h  crc.cpp  crc.h  features.txt  fileentry.cpp  fileentry.h  run.sh
miniapps/brainfreeze/: .hgignore  .hgtags  CMakeLists.txt  TODO
miniapps/brainfreeze/samples/: HELLOBF.BF  HELLOUM.BF  SORT.BF
miniapps/brainfreeze/src/: CMakeLists.txt  bf.cpp  bf.h  cli.cpp  tests.cpp
miniapps/calc/: CMakeLists.txt  bytecode.txt  calc2.cpp  tokens.txt  vm.cpp
miniapps/calc/samples/: add.calc.asm  assign.calc  assign.calc.asm  func.calc  func.calc.asm  if.calc  if.calc.asm  loop.calc  loop2.calc  modifier.calc  while.calc
miniapps/calc/src/: CMakeLists.txt  calc.cpp
miniapps/chatserv/: chatserv.cpp
miniapps/cubebuilder/: cubegen.cpp
miniapps/luascript/: CMakeLists.txt  script.lua
miniapps/luascript/src/: luascript.cpp
miniapps/markov/: CMakeLists.txt  TODO  elementnode.cpp  elementnode.h  logging.cpp  logging.h  markov.cpp  markov.h  markovdata.cpp  markovdata.h  markovfactory.cpp  markovfactory.h  tests.cpp
miniapps/primes/: CMakeLists.txt  primes.cpp
miniapps/quoteserv/: quoteserv.cpp
miniapps/sdlfont/: CMakeLists.txt  sdlfont.cpp
miniapps/tetris/: a.out  tetris.cpp  tetris.h
miniapps/weather/: readme.txt  search.rb
miniapps/yes/: CMakeLists.txt  yes.c
oneoffs/: CMakeLists.txt  assignopviapointer.cpp  checkdebug.cpp  cubechunk.cpp  default.ppm  deref.cpp  errormessage.cpp  filesystem.cpp  findnextfile.cpp  googletest.cpp  logging.cpp  mkcrctable.cpp  nastynull.cpp  pathfinding.cpp  ppm.cpp  print.cpp  rot13.cpp  simplex-calculate.cpp  singleton.cpp  stdequalstest.cpp  string_to_ints.cpp  template_compiler_spec.cpp  tweening.cpp
scripts/: run_cachegrind.sh  run_heapgrind.sh  run_memgrind.sh
snippets/: ObjReader.java  arrayutils.cpp  assert.h  averager.h  cliparser.cpp  color.h  common.h  config.cpp  config.h  cubegl.cpp  factory.cpp  gameclient.cpp  gameeworld.cpp  geoms.cpp  lrucache.cpp  math.cpp  mersenne.cpp  objreader-qt.cpp  omnicamera.cpp  printcontainer.cpp  printformattedcolors.cpp  qtgameloop.cpp  quadtree.h  randvector.cpp  renderenums.cpp  rpg.h  scopedptr.cpp  settingsmanager.cpp  stlstuff.cpp  symboltable.cpp  trace_order_of_init.cpp  usefulthings.h
snippets/fileformats/: assetloader.cpp  materialfmt.xml  md2norms.inc  read_dds.cpp  read_md2.cpp  read_md3.cpp  spritesheet.xml
snippets/haskell/: sieve.hs
snippets/interfaces/: bitset.cpp  configsettings.cpp
snippets/ruby/: readsokobanfile.rb
templates/: MakefileTemplate
workbench/: CMakeLists.txt  _workbenchtemplate.cpp  base64.cpp  bits.cpp  buff.cpp  counterutils.cpp  crc.cpp  datamanager.cpp  debuglogger.cpp  deref.cpp  entity.cpp  fileutils.cpp  lrucache.cpp  nullstream.cpp  objparser.cpp  objparser.h  octree.cpp  perlin.cpp  profilerobj.cpp  quickprofiler.cpp  random.cpp  readerwriter.cpp  runningaverage.cpp  shufflebag.cpp  simpletokenizer.cpp  simplex.cpp  statcounter.cpp  stringutils.cpp  time.cpp  volume.cpp
