cmake_minimum_required(VERSION 2.6)
PROJECT(BrainFreezeInterpreter)

###
### Brainfreeze options
###
add_definitions(-Wall -Wextra -Werror)

OPTION(DEBUG_MODE     "Enable debug symbols and assertions" OFF)
OPTION(UNIT_TESTS     "Enable brainfreeze unit test runner" ON)
OPTION(OPTZ_ALL       "All brainfreeze VM optimizations" ON)
OPTION(OPTZ_FASTJUMPS "Precomputed jump optimization" ON)
OPTION(OPTZ_DEDEUP    "Instruction de-depuliaction optimization" ON)
OPTION(OPTZ_IDIOMS    "Common idioms VM support optimization" ON)

IF(DEBUG_MODE)
   # Enable debug mode flags
   ADD_DEFINITIONS(-O0 -g)
ELSE(DEBUG_MODE)
   # Enable optimizations
   ADD_DEFINITIONS(-O2)
ENDIF(DEBUG_MODE)

IF(OPTZ_ALL)
    ADD_DEFINITIONS(-DENABLE_FAST_JUMPS -DENABLE_INSTR_DEDUP -DENABLE_IDIOMS)
ENDIF(OPTZ_ALL)

IF(OPTZ_FASTJUMPS)
    ADD_DEFINITIONS(-DENABLE_FAST_JUMPS)
ENDIF(OPTZ_FASTJUMPS)

IF(OPTZ_DEDUP)
    ADD_DEFINITIONS(-DENABLE_INSTR_DEDUP)
ENDIF(OPTZ_DEDUP)

IF(OPTZ_IDIOMS)
    ADD_DEFINITIONS(-DENABLE_IDIOMS)
ENDIF(OPTZ_IDIOMS)

###
### Application metadata
###
SET(APPLICATION_NAME "Brainfreeze Interpreter")
SET(APPLICATION_CODENAME "Brainfreeze")
SET(APPLICATION_COPYRIGHT_YEARS "2010")
SET(APPLICATION_VERSION_MAJOR 0)
SET(APPLICATION_VERSION_MINOR 2)
SET(APPLICATION_VERSION_PATCH 0)
SET(APPLICATION_VERSION_TYPE SNAPSHOT)
SET(APPLICATION_VERSION_STRING "${APPLICATION_VERSION_MAJOR}.${APPLICATION_VERSION_MINOR}.${APPLICATION_VERSION_PATCH}-${APPLICATION_VERSION_TYPE}")
SET(APPLICATION_VENDOR_ID "WhitespaceConsideredHarmful")
SET(APPLICATION_VENDOR_URL "www.whitespaceconsideredharmful.com")
SET(APPLICATION_ID "${APPLICATION_VENDOR_ID}.${PROJECT_NAME}")

###
### Output settings
###
SET(MAINFOLDER ${PROJECT_SOURCE_DIR})
SET(EXECUTABLE_OUTPUT_PATH "${MAINFOLDER}/bin")
SET(LIBRARY_OUTPUT_PATH "${MAINFOLDER}/bin")
SET(PROJECT_SOURCE_DIR "${MAINFOLDER}/src")
SET(CMAKE_MODULE_PATH "${MAINFOLDER}/thirdparty/cmake")

###
### Subdirs
###
ADD_SUBDIRECTORY(src)
